--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,22 @@ backend:
 media_folder: static/img
 public_folder: /img
 collections:
+  - label: "Pages"
+    name: "pages"
+    files:
+      - label: "About Page"
+        name: "about"
+        file: "site/content/about.yml"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Intro, name: intro, widget: markdown}
+          - label: Team
+            name: team
+            widget: list
+            fields:
+              - {label: Name, name: name, widget: string}
+              - {label: Position, name: position, widget: string}
+              - {label: Photo, name: photo, widget: image}
   - name: 'blog'
     label: 'Blog'
     folder: 'content/blog'
