Update Sections “sponsors”

--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -1,5 +1,5 @@
 title: Thank you to our sponsors!
 companies:
-  - expirationdate: 2023-03-31T05:00:00.000Z
+  - expirationdate: ""
     name: Hudl
     logo: /static/img/sponsors/hudl.png
