--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -3,6 +3,8 @@ companies:
   - expirationdate: ""
     name: Hudl
     logo: /static/img/sponsors/hudl.png
+    url: "https://www.hudl.com"
   - expirationdate: ""
     logo: /static/img/sponsors/assurity.png
     name: Assurity
+    url: "https://www.assurity.com"
