Update Sections “sponsors”

--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -5,6 +5,6 @@ companies:
     logo: /img/sponsors/hudl.png
     url: https://www.hudl.com
   - expirationdate: ""
-    logo: /static/img/sponsors/assurity.png
+    logo: /img/sponsors/assurity.png
     name: Assurity
     url: https://www.assurity.com
