--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -1,9 +1,9 @@
 title: Thank you to our sponsors!
 companies:
-  - expirationdate: ""
+  - expirationdate: 2023-03-16T05:00:00.000Z
     name: Mentors
     logo: /img/sponsors/mentors.png
-  - expirationdate: ""
+  - expirationdate: 2023-03-18T05:00:00.000Z
     name: Hudl
     logo: /img/sponsors/hudl.png
     url: https://www.hudl.com
