Implement exp dates for sponsors

--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -22,4 +22,4 @@ companies:
     logo: /img/sponsors/NGTC.png
   - expirationdate: ""
     name: Muchachos
-    logo: /img/sponsors/mentors.png
+    logo: /img/sponsors/muchachos.png
