Auto resize images on build

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,7 +41,7 @@ collections:
             widget: list
             fields:
               - {label: "Name", name: "name", widget: string}
-              - {label: "Logo", name: "logo", widget: image, media_folder: "/static/img/sponsors", public_folder: "/img/sponsors"}
+              - {label: "Logo", name: "logo", widget: image, media_folder: "/assets/img/sponsors", public_folder: "/img/sponsors"}
               - {label: "Expiration Date", name: "expirationdate", widget: date, default: '', required: false}
               - {label: "Notes (not shown)", name: "notes", widget: string, required: false}
       - label: "Partners"
@@ -54,7 +54,7 @@ collections:
             widget: list
             fields:
               - {label: "Name", name: "name", widget: string}
-              - {label: "Logo", name: "logo", widget: image, media_folder: "/static/img/partners", public_folder: "/img/partners"}
+              - {label: "Logo", name: "logo", widget: image, media_folder: "/assets/img/partners", public_folder: "/img/partners"}
               - {label: "Expiration Date", name: "expirationdate", widget: date, default: '', required: false}
               - {label: "Notes (not shown)", name: "notes", widget: string, required: false}
   - name: 'blog'
