--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://girlscodelincoln.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Girls Code Lincoln'
