--- a/data/partners.yml
+++ b/data/partners.yml
@@ -1,5 +1,5 @@
 title: Thank you to our partners!
-companies:
+organizations:
   - expirationdate: ""
     name: Fuse Coworking
     logo: /img/partners/fuse.png
