--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -1,5 +1,5 @@
 title: Thank you to our sponsors!
-companies:
+organizations:
   - expirationdate: 2023-01-17T05:00:00.000Z
     name: Mentors
     logo: /img/sponsors/mentors.png
