--- a/data/board.yml
+++ b/data/board.yml
@@ -1,6 +1,6 @@
 title: The Board!
 intro: |-
-  These are our awesome board members. **Awesome**
+  These are our awesome board members. **Awesome!**
 
   We can write whatever here in this WYSIWYG editor.
 
